WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23071
REGRESSION (
r39536
): New test failures after committing patch in
bug 23051
(ICU search)
https://bugs.webkit.org/show_bug.cgi?id=23071
Summary
REGRESSION (r39536): New test failures after committing patch in bug 23051 (I...
Simon Fraser (smfr)
Reported
2009-01-01 19:53:34 PST
The fix for
bug 23051
caused several new test failures:
http://build.webkit.org/results/trunk-mac-ppc-pixel/726/results.html
Most seem to be whitespace changes: -This tests that a style that affects child elements when hovering over a parent element correctly recalculates the child style. To test manually move the mouse over the red square, it should become green. +This tests that a style that affects child elements when hovering over a parent element correctly recalculates the child style. To test manually move the mouse over the red square, it should become green.
Attachments
patch
(5.47 KB, patch)
2009-01-01 20:41 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-01-01 20:13:06 PST
Oops! I think I can easily roll out the part of the patch that caused these.
Darin Adler
Comment 2
2009-01-01 20:13:27 PST
I could have sworn I ran the tests and didn't see those failures.
Darin Adler
Comment 3
2009-01-01 20:19:30 PST
I see exactly the mistake I made. The fix is very simple.
Darin Adler
Comment 4
2009-01-01 20:41:31 PST
Created
attachment 26359
[details]
patch
Darin Adler
Comment 5
2009-01-01 20:47:44 PST
http://trac.webkit.org/changeset/39541
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug