WebCore:

2009-01-01  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Bug 23071: REGRESSION (r39536): New test failures after committing patch in bug 23051 (ICU search)
        https://bugs.webkit.org/show_bug.cgi?id=23071

        Also fix some things that Dan suggested during review of the ICU search patch that I forgot
        the first time around.

        * editing/TextIterator.cpp: Use ICU search on all platforms that use ICU, now that
        we've double checked it works everywhere, removing HAVE_ICU_SEARCH entirely.
        Removed unused m_atBreak data member from the non-ICU code path.
        (WebCore::TextIterator::TextIterator): Move null check up.
        (WebCore::TextIterator::handleTextBox): Fix mistake that made the iterator include
        collapsed whitespace. This was left over from an earlier version of the patch.
        (WebCore::SimplifiedBackwardsTextIterator::SimplifiedBackwardsTextIterator):
        Move null check up.

LayoutTests:

2009-01-01  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Turn on the regression test for ICU search on Mac OS X Tiger too.
        It was already on for Windows (by accident, failing), but now WebCore has been changed
        so it should work fine on all platforms using ICU, which includes both of those.

        * platform/mac-tiger/editing/execCommand: Removed.
        * platform/mac-tiger/editing/execCommand/findString-diacriticals-expected.txt: Removed.



git-svn-id: svn://svn.chromium.org/blink/trunk@39541 bbb929c8-8fbe-4397-9dbb-9b2b20218538