third_party/WebKit/WebCore/editing/TextIterator.cpp
@@ -41,16 +41,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "RenderTextControl.h"
 #include "visible_units.h"
 
-#if PLATFORM(MAC) && !defined(BUILDING_ON_TIGER)
-#define HAVE_ICU_SEARCH 1
-#endif
-
-#if HAVE(ICU_SEARCH)
+#if USE(ICU_UNICODE)
 #include <unicode/usearch.h>
 #endif
 
-using namespace std;
 using namespace WTF::Unicode;
+using namespace std;
 
 namespace WebCore {
 
@@ -74,7 +70,7 @@ public:
     size_t search(size_t& startOffset);
     bool atBreak() const;
 
-#if HAVE(ICU_SEARCH)
+#if USE(ICU_UNICODE)
 
 private:
     String m_target;
@@ -95,8 +91,6 @@ private:
     Vector<bool> m_isCharacterStartBuffer;
     bool m_isBufferFull;
     size_t m_cursor;
-
-    bool m_atBreak;
 
 #endif
 };
@@ -130,11 +124,11 @@ TextIterator::TextIterator(const Range* r, bool emitCharactersBetweenAllVisibleP
 
     // get and validate the range endpoints
     Node* startContainer = r->startContainer();
+    if (!startContainer)
+        return;
     int startOffset = r->startOffset();
     Node* endContainer = r->endContainer();
     int endOffset = r->endOffset();
-    if (!startContainer)
-        return;
 
     // Callers should be handing us well-formed ranges. If we discover that this isn't
     // the case, we could consider changing this assertion to an early return.
@@ -356,7 +350,7 @@ void TextIterator::handleTextBox()
                 unsigned spaceRunStart = runStart - 1;
                 while (spaceRunStart > 0 && str[spaceRunStart - 1] == ' ')
                     --spaceRunStart;
-                emitText(m_node, spaceRunStart, runStart);
+                emitText(m_node, spaceRunStart, spaceRunStart + 1);
             } else
                 emitCharacter(' ', m_node, 0, runStart, runStart);
             return;
@@ -784,11 +778,11 @@ SimplifiedBackwardsTextIterator::SimplifiedBackwardsTextIterator(const Range *r)
         return;
 
     Node* startNode = r->startContainer();
+    if (!startNode)
+        return;
     Node* endNode = r->endContainer();
     int startOffset = r->startOffset();
     int endOffset = r->endOffset();
-    if (!startNode)
-        return;
 
     if (!startNode->offsetInCharacters()) {
         if (startOffset >= 0 && startOffset < static_cast<int>(startNode->childNodeCount())) {
@@ -1179,7 +1173,7 @@ const UChar* WordAwareIterator::characters() const
 
 // --------
 
-#if HAVE(ICU_SEARCH)
+#if USE(ICU_UNICODE)
 
 static const size_t minimumSearchBufferSize = 8192;
 
@@ -1322,7 +1316,7 @@ inline size_t SearchBuffer::search(size_t& start)
     return usearch_getMatchedLength(searcher);
 }
 
-#else
+#else // !ICU_UNICODE
 
 inline SearchBuffer::SearchBuffer(const String& target, bool isCaseSensitive)
     : m_target(isCaseSensitive ? target : target.foldCase())
@@ -1413,7 +1407,7 @@ size_t SearchBuffer::length() const
     return length;
 }
 
-#endif
+#endif // !ICU_UNICODE
 
 // --------
 
